[package]
name = "round_robin_tournament"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "round_robin_tournament"
path = "src/main.rs"

[dependencies]
calamine = { version = "0.19.1", optional = true }
dialoguer = { version = "0.10.3", optional = true }
encoding_rs = { version = "0.8.32", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["cli"]
cli = ["calamine", "dialoguer", "encoding_rs"]
